--- a/servicio-items-prod.properties
+++ b/servicio-items-prod.properties
@@ -1,2 +1,2 @@
-server.port=8007
-configuracion.texto=Configurando ambiente de Produccion
+server.port=8008
+configuracion.texto=Configurando ambiente de Produccion Villarroel
