--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
 configuracion.texto=Configurando entorno Desarrollo CJAVA
-configuracion.autor.nombre=Edwin Maravi
-configuracion.autor.email=emaravi@cjavaperu.com
+configuracion.autor.nombre=Victor villarroel
+configuracion.autor.email=vicoenviro@gmail.com
